--- a/nathanielTetteh.html
+++ b/nathanielTetteh.html
@@ -108,7 +108,7 @@
   <section class="pt-5 ">
     <div class="container">   
       <div class="row ">
-          <h4 class="pb- ps-5">See more...</h4>
+        <a href="vendors.html" class="text-decoration-none"><h4 class="pb- ps-5">See more...</h4></a>
           <div class="col-12 col-lg-4 col-md-4 m-lg-5 m-md-5 mb-5">
             <div class="d-flex justify-content-center align-items-center">
                 <div class="px-lg-3 d-none d-lg-block">
