--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
     <div class="">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="index_login.html">
                     <img src="./images/logo.png" class="img-fluid pb-3" alt="event-logo" style="width: 150px;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
