removing landing page dragging images

--- a/index_login.html
+++ b/index_login.html
@@ -160,39 +160,39 @@
         </div>
     </section >
     <section class="container" style="background: #F6F6FA;">
-        <div class="ms-3 pt-3">
-            <h3 class="pt-5 ps-3 pb-3" style="color: #0E0E2C;">Choose from a variety of artists.</h3>
-        </div>
-        <div class="row row-cols-1 row-cols-md-3 g-4 px-3">
-            <div class="col col-md-6 col-lg-4  ">
-              <div class="card h-100 border-0">
-                <img src="./images/Rectangle_229.png" style="height: 570px;" class="card-img-top img-fluid" alt="...">
-                <div class="card-body">
-                  <a href="nathanielTetteh.html"> <h5 class="card-title" style="color: #012762;">Nathaniel Tetteh. <img src="./images/arrow_Copy.svg" alt="" class="float-end"></h5> </a> 
-                </div>
+      <div class="ms-3 pt-3">
+          <h3 class="pt-5 ps-3 pb-3" style="color: #0E0E2C;">Choose from a variety of artists.</h3>
+      </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4 px-3">
+          <div class="col col-md-6 col-lg-4  ">
+            <div class="card h-100 border-0">
+              <img src="./images/Rectangle_229.png" style="height: 500px;" class="card-img-top img-fluid" alt="...">
+              <div class="card-body">
+                <h5 class="card-title" style="color: #012762;">Nathaniel Tetteh. <img src="./images/arrow_Copy.svg" alt="" class="float-end"></h5> 
               </div>
             </div>
-            <div class="col col-md-6 col-lg-4">
-              <div class="card h-100 border-0">
-                <img src="./images/Rectangle_101.png" style="height: 570px;" class="card-img-top img-fluid" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title" style="color: #012762;">Sam Kiefte. <img src="./images/arrow_Copy.svg" alt="" class="float-end"></h5>
-                </div>
+          </div>
+          <div class="col col-md-6 col-lg-4">
+            <div class="card h-100 border-0">
+              <img src="./images/Rectangle_101.png" style="height: 500px;" class="card-img-top img-fluid" alt="...">
+              <div class="card-body">
+                <h5 class="card-title" style="color: #012762;">Sam Kiefte. <img src="./images/arrow_Copy.svg" alt="" class="float-end"></h5>
               </div>
             </div>
-            <div class="col col-md-6 col-lg-4 d-none d-lg-block">
-              <div class="card h-100 border-0">
-                <img src="./images/Rectangle_102.png" style="height: 570px;" class="card-img-top img-fluid" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title" style="color: #012762;">Dave Mock. <img src="./images/arrow_Copy.svg" alt="" class="float-end"></h5>
-                </div>
+          </div>
+          <div class="col col-md-6 col-lg-4 d-none d-lg-block">
+            <div class="card h-100 border-0">
+              <img src="./images/Rectangle_102.png" style="height: 500px;" class="card-img-top img-fluid" alt="...">
+              <div class="card-body">
+                <h5 class="card-title" style="color: #012762;">Dave Mock. <img src="./images/arrow_Copy.svg" alt="" class="float-end"></h5>
               </div>
             </div>
-        </div>
-        <a class="px-3 pt-3 pb-5 text-decoration-none" href="./vendors-list-category.html" > 
-            <h5 class="mx-5  text-primary" style="font: Sansation;">See all artists <img src="./images/arrow_Copy_Copy.svg" alt="" class="ps-4"></h5>
-        </a>
-    </section>
+          </div>
+      </div>
+      <a class="px-3 pt-3 pb-5 text-decoration-none" href="./vendors-list-category.html" > 
+          <h5 class="mx-5 text-primary" style="font: Sansation;">See all artists <img src="./images/arrow_Copy_Copy.svg" alt="" class="ps-4"></h5>
+      </a>
+  </section>
     <section class="container" >
         <div class="mx-3 pt-3">
             <h3 class="pt-5 ps-3 pb-3" style="color: #0E0E2C;">Get a taste of diversity with the right cuisine.</h3>
@@ -200,7 +200,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 px-3">
             <div class="col col-md-6 col-lg-4 ">
               <div class="card h-100 border-0">
-                <img src="./images/Niagara.png" style="height: 570px;" class="card-img-top img-fluid" alt="...">
+                <img src="./images/Niagara.png" style="height: 500px;" class="card-img-top img-fluid" alt="...">
                 <div class="card-body" style="background-color: #F6F6FA;">
                   <h5 class="card-title" style="color: #012762;">Niagara. <img src="./images/arrow_Copy.svg" alt="" class="float-end"></h5> 
                 </div>
@@ -208,7 +208,7 @@
             </div>
             <div class="col col-md-6 col-lg-4">
               <div class="card h-100 border-0">
-                <img src="./images/Mama_Emma.png" style="height: 570px;" class="card-img-top img-fluid" alt="...">
+                <img src="./images/Mama_Emma.png" style="height: 500px;" class="card-img-top img-fluid" alt="...">
                 <div class="card-body" style="background-color: #F6F6FA;">
                   <h5 class="card-title" style="color: #012762;">Mama Emma. <img src="./images/arrow_Copy.svg" alt="" class="float-end"></h5>
                 </div>
@@ -216,7 +216,7 @@
             </div>
             <div class="col col-md-6 col-lg-4 d-none d-lg-block">
               <div class="card h-100 border-0">
-                <img src="./images/Toa.png" style="height: 570px;" class="card-img-top img-fluid" alt="...">
+                <img src="./images/Toa.png" style="height: 500px;" class="card-img-top img-fluid" alt="...">
                 <div class="card-body" style="background-color: #F6F6FA;">
                   <h5 class="card-title" style="color: #012762;">Toa Heftiba. <img src="./images/arrow_Copy.svg" alt="" class="float-end"></h5>
                 </div>
@@ -234,7 +234,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 px-3">
             <div class="col col-md-6 col-lg-4">
               <div class="card h-100 border-0">
-                <img src="./images/cleaning.png" style="height: 570px;" class="card-img-top img-fluid" alt="...">
+                <img src="./images/cleaning.png" style="height: 450px;" class="card-img-top img-fluid" alt="...">
                 <div class="card-body" style="background-color: #F6F6FA;">
                   <h5 class="card-title" style="color: #012762;">Cleaning Service <img src="./images/arrow_Copy.svg" alt="" class="float-end"></h5> 
                 </div>
@@ -242,7 +242,7 @@
             </div>
             <div class="col col-md-6 col-lg-4">
               <div class="card h-100 border-0">
-                <img src="./images/MCs.png" style="height: 570px;" class="card-img-top img-fluid" alt="...">
+                <img src="./images/MCs.png" style="height: 450px;" class="card-img-top img-fluid" alt="...">
                 <div class="card-body" style="background-color: #F6F6FA;">
                   <h5 class="card-title" style="color: #012762;">MCs. <img src="./images/arrow_Copy.svg" alt="" class="float-end"></h5>
                 </div>
@@ -250,7 +250,7 @@
             </div>
             <div class="col col-md-6 col-lg-4 d-none d-lg-block">
               <div class="card h-100 border-0">
-                <img src="./images/Photographer.png" style="height: 570px;" class="card-img-top img-fluid" alt="...">
+                <img src="./images/Photographer.png" style="height: 450px;" class="card-img-top img-fluid" alt="...">
                 <div class="card-body" style="background-color: #F6F6FA;">
                   <h5 class="card-title" style="color: #012762;">Photographers. <img src="./images/arrow_Copy.svg" alt="" class="float-end"></h5>
                 </div>
@@ -346,7 +346,7 @@
         </div>
         <div class="row row-cols-1 row-cols-md-2 g-4 p-3 pb-5">
             <div class="col pb-5">
-              <div class="card border-0" style="width: 100%;">
+              <div class="card border-0" style="width: 80%;">
                 <img src="./images/Segun_Art.png" class="card-img-top img-fluid" alt="...">
                 <div class="card-body ps-5">
                   <h5 class="card-title" style="color: #012762;">Segun Akinde's seige of the <br> sky fountain</h5>
@@ -357,7 +357,7 @@
               </div>
             </div>
             <div class="col pb-5">
-              <div class="card border-0" style="width: 100%;">
+              <div class="card border-0" style="width: 80%;">
                 <img src="./images/Bamdus_art.png" class="card-img-top img-fluid" alt="...">
                 <div class="card-body ps-5">
                     <h5 class="card-title" style="color: #012762;">Bamdus Shola’s state of the <br> false man.</h5>
@@ -368,7 +368,7 @@
             </div>
             </div>
             <div class="col pb-5">
-              <div class="card border-0" style="width: 100%;">
+              <div class="card border-0" style="width: 80%;">
                 <img src="./images/Adebayo_art.png" class="card-img-top img-fluid" alt="...">
                 <div class="card-body ps-5">
                     <h5 class="card-title" style="color: #012762;">Adebayo Ogunlesi’s search <br> for the maiden.</h5>
@@ -379,7 +379,7 @@
             </div>
             </div>
             <div class="col pb-5">
-              <div class="card border-0" style="width: 100%;">
+              <div class="card border-0" style="width: 80%;">
                 <img src="./images/Adegoke_art.png" class="card-img-top img-fluid" alt="...">
                 <div class="card-body ps-5">
                     <h5 class="card-title" style="color: #012762;">Adegoke Saraki’s the upper <br> room.</h5>
@@ -390,7 +390,7 @@
               </div>
             </div>
             <div class="col pb-5">
-                <div class="card border-0" style="width: 100%;">
+                <div class="card border-0" style="width: 80%;">
                   <img src="./images/Gravity_art.png" class="card-img-top img-fluid" alt="...">
                   <div class="card-body ps-5">
                     <h5 class="card-title" style="color: #012762;">Gravity defying sculpture</h5>
@@ -401,7 +401,7 @@
                 </div>
               </div>
               <div class="col pb-5">
-                <div class="card border-0" style="width: 100%;">
+                <div class="card border-0" style="width: 80%;">
                   <img src="./images/Broken_girl_art.png" class="card-img-top img-fluid" alt="...">
                   <div class="card-body ps-5">
                     <h5 class="card-title" style="color: #012762;">Broken Girl Art Piece</h5>
